// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboard deep link, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "dcf6b6aeaf0ef298",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "30c3df372c0f5dc5",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "2625eff14c87029f",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "932f820ce2053255",
    "CLIENT_VIEWER "junk" -": "eae032a5d20adecf",
    "CLIENT_VIEWER "junk" previous_year": "c196b2e5cb1e84bd",
    "CLIENT_VIEWER "last_30_days" -": "ee93784b45e7dd6c",
    "CLIENT_VIEWER "last_30_days" previous_year": "3e0151c95847e423",
    "CLIENT_VIEWER "last_month" -": "ce9c8f3060c11d09",
    "CLIENT_VIEWER "last_month" previous_year": "b109e6c5201a05f3",
    "CLIENT_VIEWER ["last_30_days","x"] -": "11433f214946d2ee",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "652fcea54969dcd6",
    "CLIENT_VIEWER undefined -": "ee93784b45e7dd6c",
    "CLIENT_VIEWER undefined previous_year": "3e0151c95847e423",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "dcf6b6aeaf0ef298",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "30c3df372c0f5dc5",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "2625eff14c87029f",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "932f820ce2053255",
    "INTERNAL_ADMIN "junk" -": "eae032a5d20adecf",
    "INTERNAL_ADMIN "junk" previous_year": "c196b2e5cb1e84bd",
    "INTERNAL_ADMIN "last_30_days" -": "ee93784b45e7dd6c",
    "INTERNAL_ADMIN "last_30_days" previous_year": "3e0151c95847e423",
    "INTERNAL_ADMIN "last_month" -": "ce9c8f3060c11d09",
    "INTERNAL_ADMIN "last_month" previous_year": "b109e6c5201a05f3",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "11433f214946d2ee",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "652fcea54969dcd6",
    "INTERNAL_ADMIN undefined -": "ee93784b45e7dd6c",
    "INTERNAL_ADMIN undefined previous_year": "3e0151c95847e423",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "compareValue": null,
                      "value": "last_30_days",
                    },
                    "type": "ReportDateRange",
                  },
                  "fallback": null,
                },
                "type": "react.suspense",
              },
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "Header",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "view": null,
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
      },
      "type": "react.fragment",
    },
  },
}
`;

exports[`dashboard deep link, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "dcf6b6aeaf0ef298",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "30c3df372c0f5dc5",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "2625eff14c87029f",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "932f820ce2053255",
    "CLIENT_VIEWER "junk" -": "eae032a5d20adecf",
    "CLIENT_VIEWER "junk" previous_year": "c196b2e5cb1e84bd",
    "CLIENT_VIEWER "last_30_days" -": "ee93784b45e7dd6c",
    "CLIENT_VIEWER "last_30_days" previous_year": "3e0151c95847e423",
    "CLIENT_VIEWER "last_month" -": "ce9c8f3060c11d09",
    "CLIENT_VIEWER "last_month" previous_year": "b109e6c5201a05f3",
    "CLIENT_VIEWER ["last_30_days","x"] -": "11433f214946d2ee",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "652fcea54969dcd6",
    "CLIENT_VIEWER undefined -": "ee93784b45e7dd6c",
    "CLIENT_VIEWER undefined previous_year": "3e0151c95847e423",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "dcf6b6aeaf0ef298",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "30c3df372c0f5dc5",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "2625eff14c87029f",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "932f820ce2053255",
    "INTERNAL_ADMIN "junk" -": "eae032a5d20adecf",
    "INTERNAL_ADMIN "junk" previous_year": "c196b2e5cb1e84bd",
    "INTERNAL_ADMIN "last_30_days" -": "ee93784b45e7dd6c",
    "INTERNAL_ADMIN "last_30_days" previous_year": "3e0151c95847e423",
    "INTERNAL_ADMIN "last_month" -": "ce9c8f3060c11d09",
    "INTERNAL_ADMIN "last_month" previous_year": "b109e6c5201a05f3",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "11433f214946d2ee",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "652fcea54969dcd6",
    "INTERNAL_ADMIN undefined -": "ee93784b45e7dd6c",
    "INTERNAL_ADMIN undefined previous_year": "3e0151c95847e423",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "compareValue": null,
                      "value": "last_30_days",
                    },
                    "type": "ReportDateRange",
                  },
                  "fallback": null,
                },
                "type": "react.suspense",
              },
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "Header",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "view": null,
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
      },
      "type": "react.fragment",
    },
  },
}
`;

exports[`dashboard spa, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "7fba1a6d176e1062",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "4cfcb8a98844c041",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "f36d5a822bebaf18",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "7e8c708d98e72bdd",
    "CLIENT_VIEWER "junk" -": "dcae3c4529273abf",
    "CLIENT_VIEWER "junk" previous_year": "0eebc1fbb8faaaf8",
    "CLIENT_VIEWER "last_30_days" -": "327609d1cb8d60ec",
    "CLIENT_VIEWER "last_30_days" previous_year": "a355d27bda16c05e",
    "CLIENT_VIEWER "last_month" -": "d1eb1f4598cd123a",
    "CLIENT_VIEWER "last_month" previous_year": "1905d78c52038718",
    "CLIENT_VIEWER ["last_30_days","x"] -": "fbfa7f89a401715d",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "2bac487a73853092",
    "CLIENT_VIEWER health": "327609d1cb8d60ec",
    "CLIENT_VIEWER undefined -": "327609d1cb8d60ec",
    "CLIENT_VIEWER undefined previous_year": "a355d27bda16c05e",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "7fba1a6d176e1062",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "4cfcb8a98844c041",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "f36d5a822bebaf18",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "7e8c708d98e72bdd",
    "INTERNAL_ADMIN "junk" -": "dcae3c4529273abf",
    "INTERNAL_ADMIN "junk" previous_year": "0eebc1fbb8faaaf8",
    "INTERNAL_ADMIN "last_30_days" -": "327609d1cb8d60ec",
    "INTERNAL_ADMIN "last_30_days" previous_year": "a355d27bda16c05e",
    "INTERNAL_ADMIN "last_month" -": "d1eb1f4598cd123a",
    "INTERNAL_ADMIN "last_month" previous_year": "1905d78c52038718",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "fbfa7f89a401715d",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "2bac487a73853092",
    "INTERNAL_ADMIN health": "a3e6fda4a35161d5",
    "INTERNAL_ADMIN undefined -": "327609d1cb8d60ec",
    "INTERNAL_ADMIN undefined previous_year": "a355d27bda16c05e",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "view": null,
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`dashboard spa, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "7fba1a6d176e1062",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "4cfcb8a98844c041",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "f36d5a822bebaf18",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "7e8c708d98e72bdd",
    "CLIENT_VIEWER "junk" -": "dcae3c4529273abf",
    "CLIENT_VIEWER "junk" previous_year": "0eebc1fbb8faaaf8",
    "CLIENT_VIEWER "last_30_days" -": "327609d1cb8d60ec",
    "CLIENT_VIEWER "last_30_days" previous_year": "a355d27bda16c05e",
    "CLIENT_VIEWER "last_month" -": "d1eb1f4598cd123a",
    "CLIENT_VIEWER "last_month" previous_year": "1905d78c52038718",
    "CLIENT_VIEWER ["last_30_days","x"] -": "fbfa7f89a401715d",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "2bac487a73853092",
    "CLIENT_VIEWER health": "327609d1cb8d60ec",
    "CLIENT_VIEWER undefined -": "327609d1cb8d60ec",
    "CLIENT_VIEWER undefined previous_year": "a355d27bda16c05e",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "7fba1a6d176e1062",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "4cfcb8a98844c041",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "f36d5a822bebaf18",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "7e8c708d98e72bdd",
    "INTERNAL_ADMIN "junk" -": "dcae3c4529273abf",
    "INTERNAL_ADMIN "junk" previous_year": "0eebc1fbb8faaaf8",
    "INTERNAL_ADMIN "last_30_days" -": "327609d1cb8d60ec",
    "INTERNAL_ADMIN "last_30_days" previous_year": "a355d27bda16c05e",
    "INTERNAL_ADMIN "last_month" -": "d1eb1f4598cd123a",
    "INTERNAL_ADMIN "last_month" previous_year": "1905d78c52038718",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "fbfa7f89a401715d",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "2bac487a73853092",
    "INTERNAL_ADMIN health": "a3e6fda4a35161d5",
    "INTERNAL_ADMIN undefined -": "327609d1cb8d60ec",
    "INTERNAL_ADMIN undefined previous_year": "a355d27bda16c05e",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "view": null,
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`portal deep link, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "29a81fda6e30a62a",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "a8b64a325e9d0063",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "9512b9fe7fe8ca66",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "f07d1bc7b7fe8bf2",
    "CLIENT_VIEWER "junk" -": "cffecc0f84064c6b",
    "CLIENT_VIEWER "junk" previous_year": "c4d76838d73a89a6",
    "CLIENT_VIEWER "last_30_days" -": "1332410e0ba421ae",
    "CLIENT_VIEWER "last_30_days" previous_year": "f1bb471219afdb93",
    "CLIENT_VIEWER "last_month" -": "35bc100d28a8fb88",
    "CLIENT_VIEWER "last_month" previous_year": "83784f19cf7800f4",
    "CLIENT_VIEWER ["last_30_days","x"] -": "2e842f76b7058c66",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "0787b735661845ce",
    "CLIENT_VIEWER health": "1332410e0ba421ae",
    "CLIENT_VIEWER undefined -": "1332410e0ba421ae",
    "CLIENT_VIEWER undefined previous_year": "f1bb471219afdb93",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "29a81fda6e30a62a",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "a8b64a325e9d0063",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "9512b9fe7fe8ca66",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "f07d1bc7b7fe8bf2",
    "INTERNAL_ADMIN "junk" -": "cffecc0f84064c6b",
    "INTERNAL_ADMIN "junk" previous_year": "c4d76838d73a89a6",
    "INTERNAL_ADMIN "last_30_days" -": "1332410e0ba421ae",
    "INTERNAL_ADMIN "last_30_days" previous_year": "f1bb471219afdb93",
    "INTERNAL_ADMIN "last_month" -": "35bc100d28a8fb88",
    "INTERNAL_ADMIN "last_month" previous_year": "83784f19cf7800f4",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "2e842f76b7058c66",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "0787b735661845ce",
    "INTERNAL_ADMIN health": "9ae3e60379283b10",
    "INTERNAL_ADMIN undefined -": "1332410e0ba421ae",
    "INTERNAL_ADMIN undefined previous_year": "f1bb471219afdb93",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                {
                  "key": null,
                  "props": {
                    "children": [
                      {
                        "key": null,
                        "props": {
                          "children": "Client",
                          "className": "text-sm font-bold uppercase tracking-widest text-text-muted",
                        },
                        "type": "p",
                      },
                      {
                        "key": null,
                        "props": {
                          "children": "Organic Social",
                          "className": "text-3xl font-extrabold uppercase text-white",
                        },
                        "type": "h1",
                      },
                    ],
                  },
                  "type": "div",
                },
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "value": "last_30_days",
                      },
                      "type": "PortalReportDateRange",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
              ],
              "className": "mb-6 flex items-end justify-between",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "view": null,
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "className": "mx-auto max-w-6xl px-8 py-12",
      },
      "type": "div",
    },
  },
}
`;

exports[`portal deep link, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "29a81fda6e30a62a",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "a8b64a325e9d0063",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "9512b9fe7fe8ca66",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "f07d1bc7b7fe8bf2",
    "CLIENT_VIEWER "junk" -": "cffecc0f84064c6b",
    "CLIENT_VIEWER "junk" previous_year": "c4d76838d73a89a6",
    "CLIENT_VIEWER "last_30_days" -": "1332410e0ba421ae",
    "CLIENT_VIEWER "last_30_days" previous_year": "f1bb471219afdb93",
    "CLIENT_VIEWER "last_month" -": "35bc100d28a8fb88",
    "CLIENT_VIEWER "last_month" previous_year": "83784f19cf7800f4",
    "CLIENT_VIEWER ["last_30_days","x"] -": "2e842f76b7058c66",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "0787b735661845ce",
    "CLIENT_VIEWER health": "1332410e0ba421ae",
    "CLIENT_VIEWER undefined -": "1332410e0ba421ae",
    "CLIENT_VIEWER undefined previous_year": "f1bb471219afdb93",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "29a81fda6e30a62a",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "a8b64a325e9d0063",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "9512b9fe7fe8ca66",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "f07d1bc7b7fe8bf2",
    "INTERNAL_ADMIN "junk" -": "cffecc0f84064c6b",
    "INTERNAL_ADMIN "junk" previous_year": "c4d76838d73a89a6",
    "INTERNAL_ADMIN "last_30_days" -": "1332410e0ba421ae",
    "INTERNAL_ADMIN "last_30_days" previous_year": "f1bb471219afdb93",
    "INTERNAL_ADMIN "last_month" -": "35bc100d28a8fb88",
    "INTERNAL_ADMIN "last_month" previous_year": "83784f19cf7800f4",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "2e842f76b7058c66",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "0787b735661845ce",
    "INTERNAL_ADMIN health": "9ae3e60379283b10",
    "INTERNAL_ADMIN undefined -": "1332410e0ba421ae",
    "INTERNAL_ADMIN undefined previous_year": "f1bb471219afdb93",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                {
                  "key": null,
                  "props": {
                    "children": [
                      {
                        "key": null,
                        "props": {
                          "children": "Client",
                          "className": "text-sm font-bold uppercase tracking-widest text-text-muted",
                        },
                        "type": "p",
                      },
                      {
                        "key": null,
                        "props": {
                          "children": "Organic Social",
                          "className": "text-3xl font-extrabold uppercase text-white",
                        },
                        "type": "h1",
                      },
                    ],
                  },
                  "type": "div",
                },
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "value": "last_30_days",
                      },
                      "type": "PortalReportDateRange",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
              ],
              "className": "mb-6 flex items-end justify-between",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "view": null,
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "className": "mx-auto max-w-6xl px-8 py-12",
      },
      "type": "div",
    },
  },
}
`;

exports[`portal spa, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "63c2fdd6b82940bd",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "8bfdabaac26488b7",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "04be8e64991b6f0e",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "a00ab1c63b8e19b3",
    "CLIENT_VIEWER "junk" -": "6fc0994acc827b8f",
    "CLIENT_VIEWER "junk" previous_year": "17ad2b1b24e0bcf8",
    "CLIENT_VIEWER "last_30_days" -": "2e10e5e5d5443b78",
    "CLIENT_VIEWER "last_30_days" previous_year": "75d4aa048bd0b498",
    "CLIENT_VIEWER "last_month" -": "26f679d0c60814a2",
    "CLIENT_VIEWER "last_month" previous_year": "8ef7fa19b3ee90c3",
    "CLIENT_VIEWER ["last_30_days","x"] -": "861a5a52dc94ef74",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "b68de58c32a8b35e",
    "CLIENT_VIEWER undefined -": "2e10e5e5d5443b78",
    "CLIENT_VIEWER undefined previous_year": "75d4aa048bd0b498",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "63c2fdd6b82940bd",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "8bfdabaac26488b7",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "04be8e64991b6f0e",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "a00ab1c63b8e19b3",
    "INTERNAL_ADMIN "junk" -": "6fc0994acc827b8f",
    "INTERNAL_ADMIN "junk" previous_year": "17ad2b1b24e0bcf8",
    "INTERNAL_ADMIN "last_30_days" -": "2e10e5e5d5443b78",
    "INTERNAL_ADMIN "last_30_days" previous_year": "75d4aa048bd0b498",
    "INTERNAL_ADMIN "last_month" -": "26f679d0c60814a2",
    "INTERNAL_ADMIN "last_month" previous_year": "8ef7fa19b3ee90c3",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "861a5a52dc94ef74",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "b68de58c32a8b35e",
    "INTERNAL_ADMIN undefined -": "2e10e5e5d5443b78",
    "INTERNAL_ADMIN undefined previous_year": "75d4aa048bd0b498",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
                null,
                {
                  "key": null,
                  "props": {},
                  "type": "ExportPdfButton",
                },
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "view": null,
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
          null,
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`portal spa, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "63c2fdd6b82940bd",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "8bfdabaac26488b7",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "04be8e64991b6f0e",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "a00ab1c63b8e19b3",
    "CLIENT_VIEWER "junk" -": "6fc0994acc827b8f",
    "CLIENT_VIEWER "junk" previous_year": "17ad2b1b24e0bcf8",
    "CLIENT_VIEWER "last_30_days" -": "2e10e5e5d5443b78",
    "CLIENT_VIEWER "last_30_days" previous_year": "75d4aa048bd0b498",
    "CLIENT_VIEWER "last_month" -": "26f679d0c60814a2",
    "CLIENT_VIEWER "last_month" previous_year": "8ef7fa19b3ee90c3",
    "CLIENT_VIEWER ["last_30_days","x"] -": "861a5a52dc94ef74",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "b68de58c32a8b35e",
    "CLIENT_VIEWER undefined -": "2e10e5e5d5443b78",
    "CLIENT_VIEWER undefined previous_year": "75d4aa048bd0b498",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "63c2fdd6b82940bd",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "8bfdabaac26488b7",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "04be8e64991b6f0e",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "a00ab1c63b8e19b3",
    "INTERNAL_ADMIN "junk" -": "6fc0994acc827b8f",
    "INTERNAL_ADMIN "junk" previous_year": "17ad2b1b24e0bcf8",
    "INTERNAL_ADMIN "last_30_days" -": "2e10e5e5d5443b78",
    "INTERNAL_ADMIN "last_30_days" previous_year": "75d4aa048bd0b498",
    "INTERNAL_ADMIN "last_month" -": "26f679d0c60814a2",
    "INTERNAL_ADMIN "last_month" previous_year": "8ef7fa19b3ee90c3",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "861a5a52dc94ef74",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "b68de58c32a8b35e",
    "INTERNAL_ADMIN undefined -": "2e10e5e5d5443b78",
    "INTERNAL_ADMIN undefined previous_year": "75d4aa048bd0b498",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
                null,
                {
                  "key": null,
                  "props": {},
                  "type": "ExportPdfButton",
                },
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "view": null,
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
          null,
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`renaissance-shaped: another section on the SPA routes is unchanged 1`] = `
{
  "dash": "cd45f1779e0792c2",
  "portal": "51eba82bf8fe2d0f",
}
`;
